<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RulesScreen"
    android:background="@android:color/white">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


        <!--Welcome to flect label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome to FLECT!"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:id="@+id/welcome_textview"
            android:textColor="@android:color/black"/>

        <!--This is lloyd label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="This is LLoyd."
            android:layout_below="@id/welcome_textview"
            android:layout_centerHorizontal="true"
            android:id="@+id/this_is_lloyd_text"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <!--Picture of Lloyd-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/this_is_lloyd_text"
            android:id="@+id/lloyd_pic"
            android:layout_centerHorizontal="true"
            android:src="@drawable/lloyd"
            android:layout_marginTop="20dp"/>

        <!--Rules paragraph 1-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lloyd_pic"
            android:layout_centerHorizontal="true"
            android:text="@string/rules_p_1"
            android:id="@+id/rules_p1"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--Things have invaded-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rules_p1"
            android:layout_centerHorizontal="true"
            android:text="@string/rules_p_2"
            android:id="@+id/rules_p2"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--Rules paragraph 3-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rules_p2"
            android:layout_centerHorizontal="true"
            android:text="@string/rules_p_3"
            android:id="@+id/rules_p3"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--Colors header-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rules_p3"
            android:layout_centerHorizontal="true"
            android:text="@string/colors_header"
            android:id="@+id/color_header"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--Colors paragraph-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/color_header"
            android:layout_centerHorizontal="true"
            android:text="@string/colors_p"
            android:id="@+id/color_para"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--GREEN INFO-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/color_para"
            android:layout_centerHorizontal="true"
            android:text="@string/green_header"
            android:id="@+id/green_label"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/holo_green_dark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/green_label"
            android:layout_centerHorizontal="true"
            android:text="@string/green_p"
            android:id="@+id/green_para"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--YELLOW INFO-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/green_para"
            android:layout_centerHorizontal="true"
            android:text="@string/yellow_header"
            android:id="@+id/yellow_label"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yellow_label"
            android:layout_centerHorizontal="true"
            android:text="@string/yellow_p"
            android:id="@+id/yellow_para"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--RED INFO-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yellow_para"
            android:layout_centerHorizontal="true"
            android:text="@string/red_header"
            android:id="@+id/red_label"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/red_label"
            android:layout_centerHorizontal="true"
            android:text="@string/red_p"
            android:id="@+id/red_para"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <!--Final para-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/red_para"
            android:layout_centerHorizontal="true"
            android:text="@string/ending_rules_para"
            android:id="@+id/last_rules_para"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

    </RelativeLayout>
</ScrollView>
